@@ -91,6 +91,8 @@ at = ans.attrib_types.where(name: "BranchTarget").first_or_create(value_count: 0
 at.attrib_type_modifiable_bies.where(role_id: maintainer_role.id).first_or_create
 at = ans.attrib_types.where(name: "BranchRepositoriesFromProject").first_or_create(value_count: 1)
 at.attrib_type_modifiable_bies.where(role_id: maintainer_role.id).first_or_create
+at = ans.attrib_types.where(name: "AutoCleanup").first_or_create(value_count: 1)
+at.attrib_type_modifiable_bies.where(role_id: maintainer_role.id).first_or_create
 
 at = ans.attrib_types.where(name: "Issues").first_or_create(value_count: 0)
 at.attrib_type_modifiable_bies.where(role_id: maintainer_role.id).first_or_create
